--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="icon" href="img/favicon.png">
     <meta charset="utf-8">
-    <title>Will - Terapias manuais, integrativas e pilates</title>
+    <title>Will - Terapias manuais, integrativas e Pilates</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
