--- a/tree.html
+++ b/tree.html
@@ -10,7 +10,7 @@ https://github.com/ardacarofficial/links-website is open source project.
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Will - Terapias manuais, Integrativas e Pilates</title>
+    <title>Will - Terapias manuais, integrativas e Pilates</title>
     <meta name="description" content="List all your links on one website.">
     <meta property="og:title" content="links-website" />
     <meta property="og:description" content="List all your links on one website." />
