--- a/tree.html
+++ b/tree.html
@@ -121,7 +121,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       <section id="main_section_container_1" class="flex_column_center">
         <!-- Menu Text Item -->
         <div class="main_text_item">
-          <p>Tratamento com seriedade, individualidade e dedicação para o seu bem-estar. <br>Liberação miofascial, Conceito ROLF, Drenagem linfática, massagem sueca(clássica), massagem relaxante, pedras quentes, ventosas, auriculoterapia e Pilates.</p>
+          <p>Terapias manuais e integrativas, de acordo com suas preferências e necessidades, dedicadas ao seu bem-estar.<br>Massagem Sueca(clássica), Liberação miofascial(Deep Tissue), Drenagem linfática, massagem relaxante, pedras quentes, ventosaterapia, Liberação miofascial(Conceito ROLF), auriculoterapia e Pilates.</p>
         </div>
         <!-- Menu Small Item 
         <div class="main_small_button_list">
