--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             <h3 class="display-3 text-capitalize text-white mb-3">Massagem Sueca (Clássica)</h3>
                             <p class="mx-md-5 px-5">Relaxar seus músculos, aliviar dores e tensões, melhorar a circulação e proporcionar uma sensação de profundo relaxamento e bem-estar, deixando o stress para trás.</p>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20Sueca%20(Cl%C3%A1ssica)." target="_blank">Agendar</a>
-                            <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#sueca" target="_blank">Saiba mais</a>
+                            <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#sueca" >Saiba mais</a>
                         </div>
                         </div>
                 </div>
@@ -177,7 +177,7 @@
                             <h3 class="display-3 text-capitalize text-white mb-3">Quick Massage</h3>
                             <p class="mx-md-5 px-5">Uma pausa revitalizante no seu dia agitado, em apenas alguns minutos alivie o estresse, relaxe os músculos e recupere sua energia.</p>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Quick%20Massage." target="_blank">Agendar</a>
-                                                        <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#qm" target="_blank">Saiba mais</a>
+                                                        <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#qm" >Saiba mais</a>
 
                         </div>
                         </div>
@@ -190,7 +190,7 @@
                             <h3 class="display-3 text-white mb-3" style="line-height: 0.9;">Liberação miofascial <br><span>(Deep Tissue)</span></h3>
                             <p class="mx-md-5 px-5">Reduza dores, libere tensões musculares profundas, aderências fasciais, melhore a função muscular e promova uma recuperação eficaz. </p>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20Miofascial%20(Deep%20Tissue)." target="_blank">Agendar</a>
-                                                        <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#dt" target="_blank">Saiba mais</a>
+                                                        <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#dt" >Saiba mais</a>
 
                         </div>
                     </div>
@@ -203,7 +203,7 @@
                             <h3 class="display-3 text-capitalize text-white mb-3">Massage Relaxante</h3>
                             <p class="mx-md-5 px-5">Desperte uma sensação de tranquilidade, alívio do estresse e renovação completa.</p>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20Relaxante." target="_blank">Agendar</a>
-                                                        <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#relax" target="_blank">Saiba mais</a>
+                                                        <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#relax" >Saiba mais</a>
 
                         </div>
                     </div>
@@ -215,7 +215,7 @@
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Drenagem Linfática</h3>
                             <p class="mx-md-5 px-5">Terapia suave e precisa estimula o sistema linfático, eliminando toxinas, excesso de líquido, reduzindo o inchaço, melhorando a circulação e promover uma sensação de leveza e bem-estar</p>
-                            <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Drenagem%20linf%C3%A1tica." target="_blank">Agendar</a>                            <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#dl" target="_blank">Saiba mais</a>
+                            <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Drenagem%20linf%C3%A1tica." target="_blank">Agendar</a>                            <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#dl" >Saiba mais</a>
 
                             
                         </div>
@@ -229,7 +229,7 @@
                             <h3 class="display-3 text-capitalize text-white mb-3">Pedras quentes</h3>
                             <p class="mx-md-5 px-5">Pedras aquecidas para massagear suavemente os músculos, proporcionando alívio de tensões e melhorando a circulação. Deixe-se envolver pelo calor terapêutico das pedras e sinta uma profunda sensação de calma e bem-estar. </p>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20com%20pedras%20quentes." target="_blank">Agendar</a>
-                                                        <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#pq" target="_blank">Saiba mais</a>
+                                                        <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#pq" >Saiba mais</a>
 
                         </div>
                     </div>
@@ -242,7 +242,7 @@
                             <h3 class="display-3 text-capitalize text-white mb-3">Ventosaterapia</h3>
                             <p class="mx-md-5 px-5">Aplicadas estrategicamente para promover a circulação sanguínea, aliviar a tensão muscular e melhorar a saúde geral. Libere as toxinas e encontre alívio natural com a Ventosaterapia.</p>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Ventosaterapia." target="_blank">Agendar</a>
-                                                        <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#vent" target="_blank">Saiba mais</a>
+                                                        <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#vent" >Saiba mais</a>
 
                         </div>
                     </div>
@@ -255,7 +255,7 @@
                             <h3 class="display-3 text-white mb-3" style="line-height: 0.9;">Liberação miofascial <br><span>(Conceito ROLF)</span></h3>
                             <p class="mx-md-5 px-5">Com base na filosofia de Ida Rolf, esta abordagem terapêutica única busca reorganizar e realinhar o corpo intervindo na fáscia, para promover um equilíbrio postural melhorado, aliviar dores crônicas e aumentar a flexibilidade. Experimente o Rolfing e sinta a harmonia física e bem-estar. </p>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20Miofascial%20(Conceito%20ROLF)." target="_blank">Agendar</a>
-                                                        <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#ROLF" target="_blank">Saiba mais</a>
+                                                        <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#ROLF" >Saiba mais</a>
 
                         </div>
                     </div>
@@ -268,7 +268,7 @@
                             <h3 class="display-3 text-white mb-3" style="line-height: 0.9;">Auriculoterapia</h3>
                             <p class="mx-md-5 px-5">Estímulos precisos nos pontos reflexos da orelha para aliviar dores, reduzir o estresse e melhorar o funcionamento do corpo. </p>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Auriculoterapia." target="_blank">Agendar</a>
-                                                        <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#auric" target="_blank">Saiba mais</a>
+                                                        <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#auric" >Saiba mais</a>
 
                         </div>
                     </div>
@@ -297,7 +297,7 @@
                 </div>
                 <div class="col-lg-8">
                     <h1 class="mb-4">Relaxe, Revitalize e Recupere</h1>
-                    <p class="pl-4 border-left border-primary">Oferecemos uma variedade de técnicas terapêuticas personalizadas para aliviar o estresse, reduzir a tensão muscular e promover uma sensação de tranquilidade profunda. Nossos tratamentos revitalizantes estimulam a circulação, aumentam a flexibilidade e reenergizam seu corpo e mente. Se você está se recuperando de lesões ou buscando alívio para dores crônicas, estou aqui para ajudar.</p>
+                    <p class="pl-4 border-left border-primary">Oferecemos uma variedade de técnicas terapêuticas personalizadas para aliviar o stress, reduzir a tensão muscular e promover uma sensação de tranquilidade profunda. Nossos tratamentos revitalizantes estimulam a circulação, aumentam a flexibilidade e reenergizam seu corpo e mente. Se você está se recuperando de lesões, buscando alívio para dores, stress e tensões, uma melhora do sono e de bem-estar físico e mental, estamos aqui para ajudar.</p>
                     <div class="row pt-3">
                         <div class="col-6">
                             <div class="bg-light text-center p-4">
