--- a/index.html
+++ b/index.html
@@ -293,11 +293,11 @@
             <div class="row align-items-center">
                
                  <div class="col-lg-4 pb-5 pb-lg-0 text-center">
-                    <iframe class="mainvideo" width="279" height="500" src="https://www.youtube.com/embed/J_6uP9pUh-U?&color=white&controls=1&modestbranding=1&playsinline=1&rel=0&enablejsapi=1&playlist=J_6uP9pUh-U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="mainvideo" width="279" height="500" src="https://www.youtube.com/embed/J_6uP9pUh-U?&color=white&controls=1&modestbranding=1&playsinline=1&rel=0&end=63&enablejsapi=1&playlist=J_6uP9pUh-U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col-lg-8">
                     <h1 class="mb-4">Relaxe, Revitalize e Recupere</h1>
-                    <p class="pl-4 border-left border-primary">Nossas terapias são baseadas na sua necessidade.<br>Estamos prontos para escutar seus objetivos, preocupações e preferências, para assim pode criar sessões sob medida para lhe promover bem-estar físico e mental.<br>Nossas técnicas nos permitem promover relaxamento e melhora do sono, redução de dores musculares, crônicas e de cabeça, redução de stress e tensões, auxilio no tratamento de algumas doenças, ajuda na recuperação esportiva e de lesões, redução de inchaços, melhora da circulação e mais...<br>Estamos aqui para ajudar a alcançar seus objetivos de saúde e bem-estar.</p>
+                    <p class="pl-4 border-left border-primary">Nossas terapias são baseadas na sua necessidade.<br>Estamos prontos para escutar seus objetivos, preocupações e preferências, para assim pode criar sessões sob medida para lhe promover bem-estar físico e mental.<br>Nossas técnicas nos permitem promover relaxamento e melhora do sono, redução de dores musculares, crônicas e de cabeça, redução de stress e tensões, auxilio no tratamento de determinadas doenças, ajuda na recuperação esportiva e de lesões, redução de inchaços, melhora da circulação e mais...<br>Estamos aqui para ajudar a alcançar seus objetivos de saúde e bem-estar.</p>
                     <div class="row pt-3">
                         <div class="col-6">
                             <div class="bg-light text-center p-4">
