--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
         <div class="owl-carousel serviced-carousel nonloop">
             
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/v2.jpg" alt="">
+                <img class="img-fluid" src="img/venthan.jpg" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Ventosas</h4>
                     <p class="text-white px-3 mb-3">Sucção controlada, alívio da tensão, aumento da circulação sanguínea, redução de inflamações e relaxamento profundo com as ventosas terapêuticas.</p>
@@ -424,7 +424,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/pedras.jpg" alt="">
+                <img class="img-fluid" src="img/pedrashan.jpg" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Pedras quentes</h4>
                     <p class="text-white px-3 mb-3">Calor aconchegante e reconfortante, promovendo relaxamento profundo, melhora da circulação e tensões, a experiência terapêutica das pedras quentes é verdadeiramente revigorante.</p>
@@ -434,7 +434,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/r1.jpg" alt="">
+                <img class="img-fluid" src="img/recursoshan.jpg" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Recursos instrumentais</h4>
                     <p class="text-white px-3 mb-3">Pantalas, bambu, instrumento de liberação miofascial e mais para proporcionar uma terapia de acordo com a sua necessidade.</p>
